@@ -1,3 +1,5 @@
+2019 [Lame] changed encoding modes to reflect valid values
+            Warning: review custom lame presets as there is no full update path
 2018 [x264] enhanced help
      [x264] small fixes/improvements
 2017 [File Indexer] added MKV audio demuxer for FFMS
